; ModuleID = '/home/carl/AnghaBench/streem/src/extr_sort.c_quick_median.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_sort.c_quick_median.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @quick_median to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @quick_median(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca double, align 8
  %9 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @quick_select(i32* %10, i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %5, align 4
  %14 = srem i32 %13, 2
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %44

16:                                               ; preds = %2
  %17 = load i32, i32* %6, align 4
  %18 = call i64 @strm_number_p(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %44

20:                                               ; preds = %16
  %21 = load i32, i32* %5, align 4
  %22 = sdiv i32 %21, 2
  %23 = sext i32 %22 to i64
  store i64 %23, i64* %7, align 8
  %24 = load i32*, i32** %4, align 8
  %25 = load i64, i64* %7, align 8
  %26 = getelementptr inbounds i32, i32* %24, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = call i64 @strm_number_p(i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %43

30:                                               ; preds = %20
  %31 = load i32, i32* %6, align 4
  %32 = call double @strm_value_float(i32 %31)
  store double %32, double* %8, align 8
  %33 = load i32*, i32** %4, align 8
  %34 = load i64, i64* %7, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = call double @strm_value_float(i32 %36)
  store double %37, double* %9, align 8
  %38 = load double, double* %8, align 8
  %39 = load double, double* %9, align 8
  %40 = fadd double %38, %39
  %41 = fdiv double %40, 2.000000e+00
  %42 = call i32 @strm_float_value(double %41)
  store i32 %42, i32* %3, align 4
  br label %46

43:                                               ; preds = %20
  br label %44

44:                                               ; preds = %43, %16, %2
  %45 = load i32, i32* %6, align 4
  store i32 %45, i32* %3, align 4
  br label %46

46:                                               ; preds = %44, %30
  %47 = load i32, i32* %3, align 4
  ret i32 %47
}

declare dso_local i32 @quick_select(i32*, i32) #1

declare dso_local i64 @strm_number_p(i32) #1

declare dso_local double @strm_value_float(i32) #1

declare dso_local i32 @strm_float_value(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
